Change a few things
- Always use JobCategory's ID for job IDs
- Don't return early in progress change handling when progress approaches 100%
- Don't log exceptions when they're caused by threadpool shutdown
- Make `getSubJobs` optionally recursive
- Add `hasSubJob` method
- Fix `JobCategory::equals`
- Improve JobManager thread-safety
- Add `JobManager::isJobRunning`
- Don't hide match buttons when jobs are running